fixed blog spacing

--- a/css/blog.css
+++ b/css/blog.css
@@ -76,7 +76,7 @@
   padding-left: 25px;
 }
 .cell {
-  height: 520px;
+  height: 600px;
 }
 .blog .blog-post footer .comment-count:hover,
 .blog .blog-post footer .comment-count:focus {
